[package]
name = "ultra-email-sender"
version = "1.0.0"
edition = "2021"
authors = ["Ultra Sender Team"]
description = "Système d'envoi d'emails ultra-sécurisé et robuste"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = "0.7"

# Email handling
lettre = { version = "0.10", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
mail-parser = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Cryptography & Security
sha2 = "0.9"
hmac = "0.11"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.13"
rand = "0.8"
argon2 = "0.3"

# Text processing
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Performance & Memory
rayon = "1.8"
dashmap = "5.5"
parking_lot = "0.12"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Database (optional) - Removed for compatibility

# CLI & Terminal
crossterm = "0.27"
indicatif = "0.17"
colored = "2.0"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Template engine
handlebars = "4.5"

# File watching
notify = "6.1"

# Compression
flate2 = "1.0"

[features]
default = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true